# covmapy

./: .cspell.json  .gitignore  .pre-commit-config.yaml  .ruff.toml  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  performance.yml  release.yml  security-scan.yml
docs/: coding_style.md
scripts/: integration_test.sh  lint.sh
src/covmapy/: cli.py  color.py  constants.py  core.py  exceptions.py  models.py  parser.py  plotly_treemap.py
tests/fixtures/: __init__.py
tests/integration/: __init__.py  test_cli_integration.py
tests/unit/: __init__.py
tests/unit/covmapy/: test_cli.py  test_color.py  test_core.py  test_exceptions.py  test_models.py  test_parser.py  test_plotly_treemap.py
